# genomic_distance

./: Cargo.toml  README.md  transmembranes.fasta
data/: 57.fasta  three.fasta
src/: main.rs
