[package]
name = "genomic_distance"
version = "0.1.0"
authors = ["Noah Daniels <ndaniels@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.3.0"
num = "^0.2.1"
float-cmp = "^0.6.0"
time = "^0.2.7"
lazy_static = "^1.4.0"
bio = "*"